--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+#griglia {
+    width: 500px;
+    height: 500px;
+    margin: auto;
+}
+
+.quadrato {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    float: left;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: sans-serif;
+    line-height: 100px;
+    text-align: center;
+}
+
+.rosso {
+    color: red;
+}
