--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
 }
 
-#griglia {
+#griglia, #griglia2 {
     width: 500px;
     height: 500px;
-    margin: auto;
+    margin: 20px auto;
 }
 
 .quadrato {
@@ -34,4 +35,10 @@
 
 .verde {
     color: green;
+}
+
+h1 {
+    text-align: center;
+    margin-top: 100px;
+    font-family: sans-serif;
 }
