sistemato bordo tabella

--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@
 }
 
 #griglia, #griglia2 {
-    width: 500px;
-    height: 500px;
+    width: 502px;
+    height: 502px;
     margin: 20px auto;
+    border: 1px solid black;
 }
 
 .quadrato {
